# context-hacking

./: .gitignore  CHAIN_PROMPT.md  CHP_UI_PRD.md  CLAUDE_CONTEXT_DUMP.txt  CONTRIBUTING.md  EXPERIMENT_INDEX.json  LICENSE.md  PROJECT_IDEAS.md  README.md  STANDARD.md  config.yaml  innovation_log.md  loop_prompt_ready.md  pyproject.toml  rebuild_index.py  state_vector.md
.claude/: settings.local.json
ablation/: ABLATION_REPORT.md  ablation_results.json  run_ablation.py
chp-test-run/: .gitignore  config.yaml  dead_ends.md  innovation_log.md  paper_appendix.md  state_vector.md
chp-test-run/prompts/: builder.md  council_gpt.md  health_check.md  reviewer.md
claude-code-skills/: INSTALL.md  chp-critic.md  chp-gates.md  chp-init.md  chp-reviewer.md  chp-run.md  chp-status.md
context_hacking/: __init__.py  cli.py  figures.py  runner.py
context_hacking/agents/: __init__.py  builder.py  council.py  critic.py  reviewer.py
context_hacking/core/: __init__.py  gates.py  memory.py  modes.py  orchestrator.py  telemetry.py
cursor-rules/: .cursorrules
cursor-rules/skills/: critic.md  gates.md  mode.md
dashboard/: __init__.py  app.html  app.py  health_patch.py  mockup_experiment_report.html  mockup_gallery.html  mockup_live_monitor.html  mockup_protocol_health.html  mockup_tooltips.html  server.py
docs/: MML_arXiv_paper.md  MML_arXiv_paper.tex  MML_launch_tweet.md  MML_plain_summary.md  comparison.md  future_work.md  methods_section.md
experiments/: FINDINGS.md  GEMINI_EXPERIMENT_FEEDBACK.md  README.md  STUDY_PLAN.md  rebuild_index.py
experiments/CHP-TETRIS-AI/: CHAIN_PROMPT.md  composition.py  config.yaml  dead_ends.md  innovation_log.md  metadata.json  optimizer.py  run_history.json  server.py  spec.md  (+2 more)
prompts/: PROMPTS_INDEX.md  anatomy_viewer.md  anatomy_viewer_vtk.md  builder.md  chemistry_sprint.md  chp_cleanup_and_index.md  consolidate.md  council_gpt.md  council_grok.md  critic.md  dashboard_redesign.md  dashboard_sync.md  euler_e.md  health_check.md  loop_template.md  math_sprint.md  overnight_fix.md  reviewer.md
tests/: test_cli.py  test_council.py  test_figures.py  test_framework.py  test_integration.py  test_parsing.py  test_runner.py  test_telemetry.py
video/: CHARACTER_BIBLE.md  FIVERR_BRIEF.md  YOUTUBE_DESCRIPTION.md  daily_standup.html
(+952 files in other folders)
