[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-hacking"
version = "0.1.0"
description = "Context Hacking Protocol (CHP) — 9-layer anti-drift framework for trustworthy LLM-assisted scientific code generation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "James Rice" },
]
keywords = [
    "llm",
    "ai-safety",
    "specification-drift",
    "agent-framework",
    "scientific-computing",
    "context-hacking",
    "anti-hallucination",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "requests>=2.31",
    "gitpython>=3.1",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
]
ml = [
    "scikit-learn>=1.4",
]
all = [
    "context-hacking[dashboard,ml]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/kepiCHelaSHen/context-hacking"
Documentation = "https://github.com/kepiCHelaSHen/context-hacking#readme"
Repository = "https://github.com/kepiCHelaSHen/context-hacking"
Issues = "https://github.com/kepiCHelaSHen/context-hacking/issues"

[project.scripts]
chp = "context_hacking.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["context_hacking"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
